--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,90 +8,40 @@
     android:fitsSystemWindows="true"
     tools:context=".activities.MainActivity">
 
-<!--<androidx.constraintlayout.widget.ConstraintLayout-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    >-->
-
-<!--    <com.google.android.material.appbar.AppBarLayout-->
-<!--        android:id="@+id/appBar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        android:fitsSystemWindows="true"-->
-<!--        app:expanded="true">-->
-
-<!--        &lt;!&ndash;        &lt;!&ndash;            &lt;!&ndash; app:layout_scrollFlags="scroll|exitUntilCollapsed" &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
-<!--        &lt;!&ndash;        <com.google.android.material.appbar.CollapsingToolbarLayout&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:id="@+id/toolbarLayout"&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:layout_height="match_parent"&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:fitsSystemWindows="true"&ndash;&gt;-->
-<!--        &lt;!&ndash;            app:contentScrim="?attr/colorPrimary"&ndash;&gt;-->
-<!--        &lt;!&ndash;            app:layout_scrollFlags="scroll|exitUntilCollapsed"&ndash;&gt;-->
-<!--        &lt;!&ndash;            app:toolbarId="@+id/toolbar"&ndash;&gt;-->
-<!--        &lt;!&ndash;            app:titleEnabled="true">&ndash;&gt;-->
-
-<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent">-->
-
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_collapseMode="pin" />
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                android:layout_marginStart="25dp"-->
-<!--                android:fontFamily="@font/sf_pro_text_medium"-->
-<!--                android:text="@string/app_name"-->
-<!--                android:textSize="30sp"-->
-<!--                android:textColor="@color/black"-->
-<!--                />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/deleteAllNotesIcon"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:src="@drawable/ic_delete"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                android:layout_marginEnd="20dp"-->
-<!--                />-->
-
-<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-<!--    </com.google.android.material.appbar.AppBarLayout>-->
-
-
-
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView2"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+    
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:navGraph="@navigation/my_nav"/>
+        android:layout_height="match_parent">
 
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:contentInsetEnd="16dp"/>
+        </com.google.android.material.appbar.AppBarLayout>
+
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView2"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:navGraph="@navigation/my_nav"/>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+
 
 
     <com.google.android.material.navigation.NavigationView
