--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <attr name="backgroundColor" format="color"/>
+    <attr name="textColor" format="color"/>
+<!--    <attr name="backgroundColor" format="color"/>-->
+</resources>
